Fix footer covering content issue

--- a/public_html/styles/default.css
+++ b/public_html/styles/default.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: black;
+  padding-bottom: 70px;
 }
 
 nav, .navbar {
